--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Access Control App",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "faker": "^4.1.0",
+    "mongoose": "^5.2.16",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -12,7 +17,7 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "test": "mocha --exit",
+    "test": "mocha",
     "start": "node server.js"
   },
   "keywords": [
