--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Access Control App",
   "main": "server.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "mongoose": "^5.2.16",
