--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "access-control",
   "version": "1.0.0",
   "description": "Access Control App",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "joi": "^13.6.0",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.16",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -19,7 +23,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "start": "node server.js"
+    "start": "node start.js"
   },
   "keywords": [
     "express",
