--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "gridfs-stream": "^1.1.1",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.16",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.3.0",
+    "mongoose-gridfs": "^0.5.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.0",
+    "multer-gridfs-storage": "^3.2.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -19,11 +26,13 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4"
   },
   "scripts": {
     "test": "mocha",
-    "start": "node start.js"
+    "start": "node start.js",
+    "dev": "nodemon.js"
   },
   "keywords": [
     "express",
