--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "faker": "^4.1.0",
@@ -21,6 +22,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -32,7 +34,7 @@
   "scripts": {
     "test": "mocha",
     "start": "node start.js",
-    "dev": "nodemon.js"
+    "dev": "nodemon start.js"
   },
   "keywords": [
     "express",
