--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "safe-buffer": "^5.1.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
