--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
-    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "joi": "^13.6.0",
@@ -26,13 +25,12 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.4"
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "test": "mocha",
     "start": "node start.js",
-    "dev": "nodemon start.js"
+    "dev": "node start.js"
   },
   "keywords": [
     "express",
